--- a/index (5).html
+++ b/index (5).html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style (3).css">
 </head>
 <body>
+    <h1><strong>cadastro</strong></h1>
     <table id="clientes">
         <tr>
             <td>Nome</td>
