--- a/index (5).html
+++ b/index (5).html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
     <link rel="stylesheet" href="style (3).css">
+    <!-- Testando -->
 </head>
 <body>
     <h1><strong>cadastro</strong></h1>
